--- a/app/index.html
+++ b/app/index.html
@@ -115,11 +115,10 @@
                                 Welcome to Accelerex Microfinance Bank
                             </h2>
                             <p class="header-content__txt">
-                                "Accelerate your business, get a loan fast!"
+                                Accelerate your business, get a loan fast!
                             </p>
                             <a href="#" class="btn">
                                     GET A LOAN NOW 
-                                    
                                 </a>
                         </div>
 
@@ -178,7 +177,7 @@
     <section class="paper__section">
         <div class="row paper__container">
             <div class="paper">
-                <img src="assets/images/globe.svg" alt="">
+                <img src="assets/images/svg/globe.svg" alt="">
                 <div>
                     Geographical Zones
                     <span>all <span>6</span></span>
@@ -187,7 +186,7 @@
 
             </div>
             <div class="paper">
-                <img src="assets/images/money.svg" alt="">
+                <img src="assets/images/svg/money.svg" alt="">
                 <div>
                     Business Fund
                     <span>up to <span>65K</span></span>
@@ -196,7 +195,7 @@
 
             </div>
             <div class="paper">
-                <img src="assets/images/customer-review.svg" alt="">
+                <img src="assets/images/svg/customer-review.svg" alt="">
                 <div>
                     Reliable Client
                     <span>up to <span>20&plus;</span></span>
@@ -205,7 +204,7 @@
 
             </div>
             <div class="paper">
-                <img src="assets/images/customer-review.svg" alt="">
+                <img src="assets/images/svg/customer-review.svg" alt="">
                 <div>
                     Reliable Client
                     <span>up to <span>20&plus;</span></span>
@@ -355,7 +354,7 @@
                                 I applied for SLS stress free loan for my child school fees and I got the money credited to my account within 5 hrs. Haruna Ibrahim, Abuja </p>
 
                             <div class="testimonials__footer">
-                                <img src="assets/images/AVATAR.svg" class="testimonials__avatar" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="testimonials__avatar" alt="">
                                 <small>Olawuyi Olusola</small>
                             </div>
 
@@ -366,7 +365,7 @@
                             <p class="testimonials__text">
                                 I applied for SLS stress free loan for an urgent need at close of business on Friday and received credit notification in bank account the same day before the weekend began. SLS truly cares. Judith, National Institute for Hospitality & Tourism.
                                 <div class="testimonials__footer">
-                                    <img src="assets/images/AVATAR.svg" class="testimonials__avatar" alt="">
+                                    <img src="assets/images/svg/AVATAR.svg" class="testimonials__avatar" alt="">
                                     <small>Olawuyi Olusola</small>
                                 </div>
 
@@ -378,7 +377,7 @@
                                 I applied for Salary Advance for my child’s school fees as the session was resuming. My account with SLS was credited the following day and I paid my daughter’s school fees on time. Yinka, National Assembly, Abuja </p>
 
                             <div class="testimonials__footer">
-                                <img src="assets/images/AVATAR.svg" class="testimonials__avatar" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="testimonials__avatar" alt="">
                                 <small>Olawuyi Olusola</small>
                             </div>
 
@@ -571,7 +570,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                         &nbsp;&nbsp;&nbsp;By Admin
                                 </small>
@@ -595,7 +594,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                         &nbsp;&nbsp;&nbsp;By Admin
                                 </small>
@@ -619,7 +618,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                         &nbsp;&nbsp;&nbsp;By Admin
                                 </small>
@@ -666,7 +665,7 @@
             </div>
             <form>
                 <div class="form__inner">
-                    <input type="text" placeholder="Enter your email">
+                    <input required type="text" placeholder="Enter your email">
                     <button type="submit">
                         SUSCRIBE
                     </button>
