--- a/app/stories.html
+++ b/app/stories.html
@@ -139,7 +139,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -163,7 +163,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -187,7 +187,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -213,7 +213,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -237,7 +237,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -261,7 +261,7 @@
                                 Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
                             </p>
                             <div class="stories__footer">
-                                <img src="assets/images/AVATAR.svg" class="stories__footer__img" alt="">
+                                <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
                                             &nbsp;&nbsp;&nbsp;By Admin
                                     </small>
@@ -289,7 +289,7 @@
                 </div>
                 <form>
                     <div class="form__inner">
-                        <input type="text" placeholder="Enter your email">
+                        <input required type="text" placeholder="Enter your email">
                         <button type="submit">
                             SUSCRIBE
                         </button>
