--- a/app/contact.html
+++ b/app/contact.html
@@ -209,13 +209,13 @@
                             </h3>
 
                             <div class="contact-form__inner-container ">
-                                <input type="text " id="contact-form__name " required autocomplete="off " class="contact-form__input ">
+                                <input required type="text " id="contact-form__name " required autocomplete="off " class="contact-form__input ">
                                 <label for="contact-form__name " class="contact-form__label ">
                                     Name
                                 </label>
                             </div>
                             <div class="contact-form__inner-container ">
-                                <input type="text " id="contact-form__email " required autocomplete="off " class="contact-form__input ">
+                                <input required type="text " id="contact-form__email " required autocomplete="off " class="contact-form__input ">
                                 <label for="contact-form__email " class="contact-form__label ">
                                     Email
                                 </label>
@@ -228,7 +228,7 @@
                             </div>
 
                             <div class="contact-form__inner-container ">
-                                <input type="submit " value="send message" class="contact-form__submit btn">
+                                <input required type="submit" value="send message" class="contact-form__submit btn">
                             </div>
 
                         </form>
@@ -255,7 +255,7 @@
                 </div>
                 <form>
                     <div class="form__inner">
-                        <input type="text" placeholder="Enter your email">
+                        <input required type="text" placeholder="Enter your email">
                         <button type="submit">
                             SUSCRIBE
                         </button>
