--- a/app/faq.html
+++ b/app/faq.html
@@ -203,7 +203,7 @@
                 </div>
                 <form>
                     <div class="form__inner">
-                        <input type="text" placeholder="Enter your email">
+                        <input required type="text" placeholder="Enter your email">
                         <button type="submit">
                             SUSCRIBE
                         </button>
