--- a/app/about.html
+++ b/app/about.html
@@ -142,33 +142,20 @@
 
     </section>
 
-    <section class="about-section">
+    <section class="progress__section">
 
-        <div class="row">
-            <div class="about-section__container">
-                <div class="about-section__item">
-                    <h2 class="title title--grey">
-                        recent case studies
-                    </h2>
-                    <h3 class="title__sub about-section__title">
-                        Corporate Video Showcase
-                    </h3>
-                    <p class="gen__text">
-                        With a community of over 400 million users (and a majority age group being 18 to 29), wouldn’t you want to make sure you’re monitoring what people are posting on social networks? Especially if the demographic of your audience falls in that age range.
-                    </p>
-                    <a href="" class="btn">
-                        learn more
-                    </a>
-                </div>
-                <div class="about-section__item">
-                    <img src="assets/images/here.jpg" class="about-section__img" alt="">
-                </div>
+        <div class="progress__container row">
+            <div class="progress">
+
+                <div class="progress-bar-one"></div>
+                <div class="progress-bar-two"></div>
+                <div class="progress-bar-three"></div>
+                <div class="progress-bar-four"></div>
+
             </div>
         </div>
 
     </section>
-
-
 
     <section class="about-content">
         <div class="row">
@@ -208,21 +195,22 @@
                         </p>
 
                     </div>
-                    <div class="home-about-wrapper">
+
+                    <div class="home-about-wrapper active">
 
                         <ul>
                             <li class="about-content__list gen__text">Integrity</li>
-                            <li class="about-content__list gen__text">Accessibility</li class="about-content__list">
-                            <li class="about-content__list gen__text">Friendliness</li class="about-content__list">
-                            <li class="about-content__list gen__text">Professionalism</li class="about-content__list">
-                            <li class="about-content__list gen__text">Excellence</li class="about-content__list">
-                            <li class="about-content__list gen__text">Speed</li class="about-content__list">
-                            <li class="about-content__list gen__text">Accuracy</li class="about-content__list">
+                            <li class="about-content__list gen__text">Accessibility</li>
+                            <li class="about-content__list gen__text">Friendliness</li>
+                            <li class="about-content__list gen__text">Professionalism</li>
+                            <li class="about-content__list gen__text">Excellence</li>
+                            <li class="about-content__list gen__text">Speed</li>
+                            <li class="about-content__list gen__text">Accuracy</li>
                         </ul>
                     </div>
 
-
                 </div>
+
                 <div class="about-content__item">
                     <h2 class="title">
                         frequently asked questions
@@ -314,72 +302,6 @@
 
     </section>
 
-    <section class="progress__section">
-
-        <div class="progress__container row">
-            <div class="progress">
-
-                <div class="progress-bar-one"></div>
-                <div class="progress-bar-two"></div>
-                <div class="progress-bar-three"></div>
-                <div class="progress-bar-four"></div>
-
-            </div>
-        </div>
-
-    </section>
-
-    <section class="team__section">
-        <div class="container">
-            <div class="row">
-                <div class="teams">
-                    <h2 class="title">
-                        MANAGEMENT TEAM
-                    </h2>
-                    <div class="team__container">
-                        <div class="team">
-                            <img src="assets/images/ADE.png" alt="" class="team__img">
-                            <div class="team__content">
-                                <h3 class="team__content__title">
-                                    Omololu Akinjide Adewalure
-                                </h3>
-                                <h4 class="team__content__title__sub">
-                                    Chief Operations Officer
-                                </h4>
-                                <p class="team__content__text">
-                                    Omololu Akinjide Adewalure is the Chief operations officer. He has had 9 years working experience in banking operations. He started his ...
-                                    <a href="#" class="link modal__link">
-                                        VIEW PROFILE
-                                    </a>
-                                </p>
-
-                            </div>
-                        </div>
-                        <div class="team">
-                            <img src="assets/images/GRACE.png" alt="" class="team__img">
-                            <div class="team__content">
-                                <h3 class="team__content__title">
-                                    Anara Chinyere Grace
-                                </h3>
-
-                                <h4 class="team__content__title__sub">
-                                    Head, Operations
-                                </h4>
-                                <p class="team__content__text">
-                                    race Anara is the head Banking Operations. She is a customer service expert, with 10 years banking operations experience. She has functioned ...
-                                    <a href="#" class="link modal__link">
-                                        VIEW PROFILE
-                                        
-                                    </a>
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section class="board__section">
         <div class="container">
@@ -466,6 +388,83 @@
         </div>
     </section>
 
+    <section class="team__section">
+        <div class="container">
+            <div class="row">
+                <div class="teams">
+                    <h2 class="title">
+                        MANAGEMENT TEAM
+                    </h2>
+                    <div class="team__container">
+                        <div class="team">
+                            <img src="assets/images/ADE.png" alt="" class="team__img">
+                            <div class="team__content">
+                                <h3 class="team__content__title">
+                                    Omololu Akinjide Adewalure
+                                </h3>
+                                <h4 class="team__content__title__sub">
+                                    Chief Operations Officer
+                                </h4>
+                                <p class="team__content__text">
+                                    Omololu Akinjide Adewalure is the Chief operations officer. He has had 9 years working experience in banking operations. He started his ...
+                                    <a href="#" class="link modal__link">
+                                        VIEW PROFILE
+                                    </a>
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="team">
+                            <img src="assets/images/GRACE.png" alt="" class="team__img">
+                            <div class="team__content">
+                                <h3 class="team__content__title">
+                                    Anara Chinyere Grace
+                                </h3>
+
+                                <h4 class="team__content__title__sub">
+                                    Head, Operations
+                                </h4>
+                                <p class="team__content__text">
+                                    race Anara is the head Banking Operations. She is a customer service expert, with 10 years banking operations experience. She has functioned ...
+                                    <a href="#" class="link modal__link">
+                                        VIEW PROFILE
+                                        
+                                    </a>
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="app-section__s">
+        <div class="app-section row">
+            <div class="app-section__container">
+                <img src="assets/images/bg-phone-1.png" class="app-section__img" alt="">
+            </div>
+            <div class="app-section__container">
+                <h1 class="title title--grey">
+                    Download our App
+                </h1>
+                <h2 class="title__sub">
+                    Speed Up the Loan Process
+                </h2>
+                <p class="app-section__text">
+                    Stay tuned for the hottest news and the latest updates! With our app you will always have a chance to see new offers and loan rate changes. Use Loan Trust App an stay mobile and trendy!
+                </p>
+                <a href="" class="btn btn--customized">
+                    learn more
+                </a>
+                <a href="" class="btn btn--customized-two">
+                    Download App
+                </a>
+            </div>
+        </div>
+    </section>
 
     <section class="timeline__section">
 
@@ -536,31 +535,33 @@
 
     </section>
 
+    <section class="about-section">
 
-    <section class="app-section__s">
-        <div class="app-section row">
-            <div class="app-section__container">
-                <img src="assets/images/bg-phone-1.png" class="app-section__img" alt="">
-            </div>
-            <div class="app-section__container">
-                <h1 class="title title--grey">
-                    Download our App
-                </h1>
-                <h2 class="title__sub">
-                    Speed Up the Loan Process
-                </h2>
-                <p class="app-section__text">
-                    Stay tuned for the hottest news and the latest updates! With our app you will always have a chance to see new offers and loan rate changes. Use Loan Trust App an stay mobile and trendy!
-                </p>
-                <a href="" class="btn btn--customized">
-                    learn more
-                </a>
-                <a href="" class="btn btn--customized-two">
-                    Download App
-                </a>
+        <div class="row">
+            <div class="about-section__container">
+                <div class="about-section__item">
+                    <h2 class="title title--grey">
+                        recent case studies
+                    </h2>
+                    <h3 class="title__sub about-section__title">
+                        Corporate Video Showcase
+                    </h3>
+                    <p class="gen__text">
+                        With a community of over 400 million users (and a majority age group being 18 to 29), wouldn’t you want to make sure you’re monitoring what people are posting on social networks? Especially if the demographic of your audience falls in that age range.
+                    </p>
+                    <a href="" class="btn">
+                        learn more
+                    </a>
+                </div>
+                <div class="about-section__item">
+                    <img src="assets/images/here.jpg" class="about-section__img" alt="">
+                </div>
             </div>
         </div>
+
     </section>
+
+
 
 
 
@@ -824,6 +825,7 @@
 
     <script>
         var scaleUp = {
+            distance: '10%',
             scale: 0,
             // origin: 'bottom',
             viewFactor: 1,
@@ -833,7 +835,7 @@
 
 
         var slideInLeft = {
-            distance: '50%',
+            distance: '0%',
             origin: 'left',
             viewFactor: 1,
             opacity: 0,
@@ -842,9 +844,9 @@
         };
 
         var slideInRight = {
-            distance: '50%',
+            distance: '0%',
             origin: 'left',
-            viewFactor: .5,
+            viewFactor: 1,
             opacity: 0,
             duration: 2000,
             delay: 200
@@ -852,21 +854,21 @@
 
         var fadedIn = {
             scale: 0,
-            viewFactor: .3,
+            viewFactor: 1,
             duration: 2000
         };
 
         var slideInDown = {
-            distance: '50%',
+            distance: '0%',
             origin: 'top',
-            viewFactor: 0,
+            viewFactor: 1,
             opacity: 0,
             duration: 2000,
             delay: 200
         };
 
         var slideInUp = {
-            distance: '40%',
+            distance: '0%',
             origin: 'bottom',
             viewFactor: 1,
             opacity: 0,
@@ -874,7 +876,7 @@
             delay: 200
         };
         var slideInUpNo = {
-            distance: '100%',
+            distance: '0%',
             origin: 'bottom',
             viewFactor: 1,
             opacity: .5,
@@ -886,7 +888,7 @@
 
 
 
-        ScrollReveal().reveal(".about-detail", slideInUp);
+        // ScrollReveal().reveal(".about-detail", slideInUp);
         ScrollReveal().reveal(".about-section__img", scaleUp);
         ScrollReveal().reveal(".gen__text", slideInLeft);
         ScrollReveal().reveal(".about-content__item", slideInUp);
