--- a/app/index.html
+++ b/app/index.html
@@ -282,42 +282,42 @@
                     </h2> -->
                     <div class="home-about__p-container">
                         <h2 class="home-about__title title__sub--smaller">
-                            40 years, we passionate about achieving better results for our clients
+                            We are passionate about achieving better results for our clients
                         </h2>
                         <ul class="home-about__menu">
                             <li class="home-about__menu-tab active">
-                                WHAT WE DO
+                                VISION
                             </li>
                             <li class="home-about__menu-tab">
-                                WHAT WE DO
+                                MISSION
                             </li>
                             <li class="home-about__menu-tab">
-                                WHAT WE DO
+                                VALUES
                             </li>
                         </ul>
                         <div class="home-about-wrapper active">
                             <p class="home-about__paragraph">
-                                Accelerex Microfinance Bank is founded with focus on the financially unserved and underserved.
-                            </p>
+                                To be the leading and most innovative financial services provider to all at world class standard. </p>
                         </div>
                         <div class="home-about-wrapper">
                             <p class="home-about__paragraph">
-                                bAccelerex Microfinance Bank is founded with focus on the financially unserved and underserved.
-                            </p>
+                                To leverage on technology in impacting the lives and businesses of our clients by ensuring access to financial services in a most innovative way </p>
                         </div>
                         <div class="home-about-wrapper">
-                            <p class="home-about__paragraph">
-                                cAccelerex Microfinance Bank is founded with focus on the financially unserved and underserved.
-                            </p>
+
+                            <ul>
+                                <li class="about-content__list gen__text">Integrity</li>
+                                <li class="about-content__list gen__text">Accessibility</li class="about-content__list">
+                                <li class="about-content__list gen__text">Friendliness</li class="about-content__list">
+                                <li class="about-content__list gen__text">Professionalism</li class="about-content__list">
+                                <li class="about-content__list gen__text">Excellence</li class="about-content__list">
+                                <li class="about-content__list gen__text">Speed</li class="about-content__list">
+                                <li class="about-content__list gen__text">Accuracy</li class="about-content__list">
+                            </ul>
                         </div>
 
 
                     </div>
-
-
-                    <a href="#" class="btn btn--outlined">
-                        GET IN TOUCH                       
-                    </a>
                 </div>
             </div>
         </div>
@@ -567,8 +567,7 @@
                                 March 5, 2019
                             </span>
                             <p class="stories__p">
-                                Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
-                            </p>
+                                Read about how others are dealing with their student loan debt. Meet Dave. "I am struggling. </p>
                             <div class="stories__footer">
                                 <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
@@ -591,8 +590,7 @@
                                 Feb 2, 2018
                             </span>
                             <p class="stories__p">
-                                Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
-                            </p>
+                                A loan that enriches your life and helps you build prosperity, because it's about the difference it has made in </p>
                             <div class="stories__footer">
                                 <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
                                 <small>
@@ -615,7 +613,7 @@
                                 March 5, 2019
                             </span>
                             <p class="stories__p">
-                                Shine bright tonight, you and i, we are beutiful tonight, you and i, we are beutiful you and i, we are beutiful ...
+                                Read about how others are dealing with their student loan debt. Meet Dave. "I am struggling.
                             </p>
                             <div class="stories__footer">
                                 <img src="assets/images/svg/AVATAR.svg" class="stories__footer__img" alt="">
