--- a/app/faq.html
+++ b/app/faq.html
@@ -119,8 +119,11 @@
                 <div class="faq">
                     <div class="faq__item">
                         <div class="faq__header">
-                            <span>
-                                1. What does we do?      
+
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    1.      
+                                </span> Am I eligible for a SLS loan? Why am I not qualified for a loan?
                             </span>
                             <span class="minus">
                                 &minus;
@@ -130,14 +133,23 @@
                             </span>
                         </div>
                         <div class="faq__content gen__text">
-                            We take pride in our ability to learn the fundamentals of virtually any industry or technology quickly. Some of the markets we have served include green technologies, medical devices, biotechnology, Internet/e-commerce, telecommunications, distance education/e-learning,
-                            real estate… <a href="">view all</a>
+                            To qualify for a loan, you must be:
+                            <ul style="padding-left: 30px">
+                                <li class="gen__text" style="padding-bottom: 0">Be between 25 – 59 years old</li>
+                                <li class="gen__text" style="padding-bottom: 0">Have a verifiable source of income</li>
+                                <li class="gen__text" style="padding-bottom: 0">Live and / or work in cities where we operate</li>
+                                <li class="gen__text" style="padding-bottom: 0">Have a savings or current bank account with any commercial bank</li>
+                            </ul>
+
                         </div>
                     </div>
+
                     <div class="faq__item">
                         <div class="faq__header">
-                            <span>
-                                2. What industries do you specialize in?      
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    2.      
+                                </span> How much can I borrow and for how long?
                             </span>
                             <span class="minus">
                                 &minus;
@@ -147,14 +159,16 @@
                             </span>
                         </div>
                         <div class="faq__content gen__text">
-                            We take pride in our ability to learn the fundamentals of virtually any industry or technology quickly. Some of the markets we have served include green technologies, medical devices, biotechnology, Internet/e-commerce, telecommunications, distance education/e-learning,
-                            real estate… <a href="">view all</a>
+                            You can get up to &#x20A6;4million for 12 months.
                         </div>
                     </div>
+
                     <div class="faq__item">
                         <div class="faq__header">
-                            <span>
-                                3. Can you guarantee that our plan will work?      
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    3.      
+                                </span> How do I apply?
                             </span>
                             <span class="minus">
                                 &minus;
@@ -164,14 +178,16 @@
                             </span>
                         </div>
                         <div class="faq__content gen__text">
-                            We take pride in our ability to learn the fundamentals of virtually any industry or technology quickly. Some of the markets we have served include green technologies, medical devices, biotechnology, Internet/e-commerce, telecommunications, distance education/e-learning,
-                            real estate… <a href="">view all</a>
+                            <div>Please visit our website <a href="http://www.sls.com" target="_blank">www.sls.com</a> to apply or call +234 90 2115 9180. </div>SLS
                         </div>
                     </div>
+
                     <div class="faq__item">
                         <div class="faq__header">
-                            <span>
-                                4. Can you help us raise money?      
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    4.      
+                                </span>How long does it take to process a loan?
                             </span>
                             <span class="minus">
                                 &minus;
@@ -181,8 +197,45 @@
                             </span>
                         </div>
                         <div class="faq__content gen__text">
-                            We take pride in our ability to learn the fundamentals of virtually any industry or technology quickly. Some of the markets we have served include green technologies, medical devices, biotechnology, Internet/e-commerce, telecommunications, distance education/e-learning,
-                            real estate… <a href="">view all</a>
+                            Your loan process can be completed in 24 hours provided all documents are valid &amp; presented on application... SLS
+                        </div>
+                    </div>
+
+                    <div class="faq__item">
+                        <div class="faq__header">
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    5.      
+                                </span>What documents do I need to apply for a loan?
+                            </span>
+                            <span class="minus">
+                                &minus;
+                            </span>
+                            <span class="plus">
+                                &plus;
+                            </span>
+                        </div>
+                        <div class="faq__content gen__text">
+                            You need your bank statement, a government issued ID card and utility bill (optional).
+                        </div>
+                    </div>
+
+                    <div class="faq__item">
+                        <div class="faq__header">
+                            <span style="display: flex;justify-content: flex-start;">
+                                <span style="margin-right: 13px">
+                                    6.      
+                                </span>Why does Renmoney need my BVN?
+                            </span>
+                            <span class="minus">
+                                &minus;
+                            </span>
+                            <span class="plus">
+                                &plus;
+                            </span>
+                        </div>
+                        <div class="faq__content gen__text">
+                            This is a CBN policy applicable to financial institutions as part of KYC requirements.
                         </div>
                     </div>
 
