--- a/app/faq.html
+++ b/app/faq.html
@@ -37,7 +37,7 @@
             <div class="menu__inner row">
 
                 <div class="menu__left-item">
-                    <img src="" alt="" class="logo">
+                    <img src="assets/images/logo.jpg" alt="Logo" class="logo">
                 </div>
 
                 <div class="menu__right-item">
@@ -113,7 +113,7 @@
                     FAQ
                 </h3>
                 <p class="about-content__text">
-                    For more than 40 years, we’ve been passionate about achieving better results for our clients.
+                    We’ve been passionate about achieving better results for our clients.
                 </p>
 
                 <div class="faq">
@@ -225,7 +225,7 @@
                             <span style="display: flex;justify-content: flex-start;">
                                 <span style="margin-right: 13px">
                                     6.      
-                                </span>Why does Renmoney need my BVN?
+                                </span>Why does SLS need my BVN?
                             </span>
                             <span class="minus">
                                 &minus;
