--- a/app/about.html
+++ b/app/about.html
@@ -39,7 +39,7 @@
             <div class="menu__inner row">
 
                 <div class="menu__left-item">
-                    <img src="" alt="" class="logo">
+                    <img src="assets/images/logo.jpg" alt="Logo" class="logo">
                 </div>
 
                 <div class="menu__right-item">
@@ -168,7 +168,7 @@
                         Company Profile
                     </h3>
                     <p class="about-content__text">
-                        For more than 40 years, we’ve been passionate about achieving better results for our clients.
+                        We are powered by the best team in the industry
                     </p>
                     <ul class="home-about__menu">
                         <li class="home-about__menu-tab active">
@@ -219,7 +219,7 @@
                         FAQ
                     </h3>
                     <p class="about-content__text">
-                        For more than 40 years, we’ve been passionate about achieving better results for our clients.
+                        We’ve been passionate about achieving better results for our clients.
                     </p>
 
                     <div class="faq">
