--- a/app/contact.html
+++ b/app/contact.html
@@ -59,7 +59,7 @@
                         <span style="text-transform:upper-case;">FAQ</span>
                     </a>
                     <a href="contact.html" class="menu__link menu__link-btn">
-                        GET IN TOUCH
+                        SIGN IN
                     </a>
                     <div class="menu-icon">
                         <div class="menu-icon__line"></div>
