--- a/app/faq.html
+++ b/app/faq.html
@@ -60,7 +60,7 @@
                         <span style="text-transform:upper-case;">FAQ</span>
                     </a>
                     <a href="contact.html" class="menu__link menu__link-btn">
-                        GET IN TOUCH
+                        SIGN IN
                     </a>
                     <div class="menu-icon">
                         <div class="menu-icon__line"></div>
@@ -71,12 +71,12 @@
 
         <div class="mobile-menu">
             <div class="mobile-menu__links">
-                <a href="index.html" class="mobile-menu__link mobile-menu__link--active">HOME</a>
+                <a href="index.html" class="mobile-menu__link">HOME</a>
                 <a href="about.html" class="mobile-menu__link">ABOUT US</a>
                 <a href="products.html" class="mobile-menu__link">PRODUCTS</a>
                 <a href="stories.html" class="mobile-menu__link">STORIES</a>
                 <a href="contact.html" class="mobile-menu__link">CONTACT US</a>
-                <a href="faq.html" class="mobile-menu__link">FAQ</a>
+                <a href="faq.html" class="mobile-menu__link mobile-menu__link--active">FAQ</a>
             </div>
         </div>
 
