--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
                         <span style="text-transform: uppercase;">FAQ</span>
                     </a>
                     <a href="contact.html" class="menu__link menu__link-btn">
-                        GET IN TOUCH
+                        SIGN IN
                     </a>
 
                     <div class="menu-icon">
