--- a/app/stories.html
+++ b/app/stories.html
@@ -60,7 +60,7 @@
                         <span style="text-transform: uppercase;">FAQ</span>
                     </a>
                     <a href="contact.html" class="menu__link menu__link-btn">
-                        GET IN TOUCH
+                        SIGN IN
                     </a>
                     <div class="menu-icon">
                         <div class="menu-icon__line"></div>
