--- a/app/stories.html
+++ b/app/stories.html
@@ -37,7 +37,7 @@
             <div class="menu__inner row">
 
                 <div class="menu__left-item">
-                    <img src="assets/images/logo.jpg" alt="Logo" class="logo">
+                    <img src="assets/images/logo.png" alt="Logo" class="logo">
                 </div>
 
                 <div class="menu__right-item">
