added link to webapp

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
                     <a href="faq.html" class="menu__link">
                         <span style="text-transform: uppercase;">FAQ</span>
                     </a>
-                    <a href="contact.html" class="menu__link menu__link-btn">
+                    <a href="https://accelerex-app.netlify.com/login" class="menu__link menu__link-btn">
                         SIGN IN
                     </a>
 
@@ -94,7 +94,7 @@
                             <p class="header-content__txt">
                                 Let's get started
                             </p>
-                            <a href="#" class="btn">
+                            <a href="https://accelerex-app.netlify.com" class="btn">
                                     APPLY NOW
                                 </a>
                         </div>
@@ -117,7 +117,7 @@
                             <p class="header-content__txt">
                                 No complications, we disburse immediately, if eligible
                             </p>
-                            <a href="#" class="btn">
+                            <a href="https://accelerex-app.netlify.com" class="btn">
                                     GET A LOAN NOW 
                                     
                                 </a>
@@ -139,7 +139,7 @@
                             <p class="header-content__txt ">
                                 Accelerate your business, get a loan fast!
                             </p>
-                            <a href="# " class="btn ">
+                            <a href="https://accelerex-app.netlify.com" class="btn ">
                                     GET A LOAN NOW 
                                 </a>
                         </div>
